homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha        # < name of the deployment
  namespace: ha   # < namespace where place the deployment and pods
  labels:
    app: ha       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: ha
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: ha
    spec:
      volumes:
      - name: ha-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/ha-config # < pvc name we created in the previous yaml
      containers:
      - image: lscr.io/linuxserver/homeassistant # < the name of the docker image we will use
        name: ha                     # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "100" # < group "user"
        - name: PUID
          value: "568" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 8123
           name: http-8123
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: ha-config               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
